#296 #306 new Stetl VSI Extractor and single level .zipfile for LV

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -1,27 +1,36 @@
-# Process-chains for extracting BAG source data from input zip files to PostGIS.
+# Stetl-Process-chains for extracting BAG VERSION 2 source data from input zip files to PostGIS.
 # A Chain is a series of Components: one Input, zero or more Filters and one Output.
 # The output of a Component is connected to the input of the next Component (except for
 # the final Output Component, which writes to the final destination, e.g. PostGIS or GeoPackage..
+# Stetl is the ETL tool used. No custom Python code is needed!
 #
 # Currently the following chains are executed in the following order:
-# - SQL pre:  DB initialization, delete tables, create schema
-# - CBS gemeente provincie koppelingen
+# - SQL pre:  DB initialization, create schema and tables
+# - Process "Leveringsdoc" put meta info like dataset date in nlx_bag_info table
+# - Process CBS gemeente provincie koppelingen
 # - BAG Woonplaats-Gemeente Koppeling (onderdeel van BAG Extract Kadaster product)
 # - input_bag_zip_file: inlezen BAG in PostGIS met LVBAG Driver
-# - input_sql_post: post=processing o.a. aanmaken VIEWs
+# - input_sql_post: post=processing o.a. aanmaken indexen en VIEWs
 #
-# Any substitutable values are specified in curly brackets e.g. {password}.
-# Actual values can be passed as args to Stetl main.py.
-
+# NB We need to Outputs GDAL VSI filepath to XML for only WPL.
+# Reason is issue: https://github.com/OSGeo/gdal/issues/3462
+# The WPL is the only zipfile within the BAG LV that contains a single
+# XML file. Hence we need to use XML file-level VSI extraction.
+# Once that issue is solved we can remove the WPL specific Chain and
+# use the bag_obj_file_pat to handle all object types.
+# Lines to be fixed are indicated below with the line:
+# [GDAL_3462]
+#
 # Just van den Broecke - 2021
 
 [etl]
-# chains = input_bag_zip_file|extract_bag_zip_file|output_std
+# [GDAL_3462]
 chains = input_sql_pre|output_postgres_sql,
          input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
          input_cbs_gemeenten_csv|output_postgres_gemeenten,
          input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
-         input_bag_vsizip_file|extract_bag_vsizip_file|vsizip_filter|output_ogr2ogr,
+         input_bag_zip_file|extract_bag_vsizip_file|vsizip_filter|output_ogr2ogr,
+         input_bag_zip_file_wpl|extract_bag_vsizip_file_xml|output_ogr2ogr,
          input_sql_post|output_postgres_sql
 
 
@@ -47,16 +56,26 @@ class = stetl.inputs.fileinput.CsvFileInput
 file_path = data/cbs/gemeente/{cbs_gemeenten_jaar}.csv
 delimiter = ;
 
-
-# The zip file for the LV zipfile directly
-# contains the zip files for each bag obj type
-# Outputs VsiZip file strings
-[input_bag_vsizip_file]
+# BAG Extract LV zipfile.
+# Contains the zip files for each BAG obj type
+# Outputs GDAL VSI filepath strings filtered by name_filter pattern
+# Any substitutable values are specified in curly brackets e.g. {password}.
+# Actual values can be passed as args to Stetl main.py.
+# [GDAL_3462]
+[input_bag_zip_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
-name_filter = {bag_obj_file_pat}.{file_ext_filter}
+name_filter = {bag_obj_file_pat_no_wpl}{bag_file_wildcard}.{bag_file_ext}
 
-# The GEM-WPL-RELATIE XML Input file
+# BAG Extract LV zipfile for WPL only.
+# Contains the zip files for each BAG obj type
+# [GDAL_3462]
+[input_bag_zip_file_wpl]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {bag_input_file}
+name_filter = {bag_wpl_file_pat}{bag_file_wildcard}.xml
+
+# Output GEM-WPL-RELATIE XML Input file as GDAL VSI string.
 [input_bag_wpl_gem_koppeling_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
@@ -76,19 +95,20 @@ name_filter = Leveringsdocument-BAG-Extract.xml
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_bag_vsizip_file]
 class = stetl.filters.fileextractor.VsiFileExtractor
-file_path = temp/bagger.{file_ext_filter}
+file_path = temp/bagger.{bag_file_ext}
 delete_file = True
 
-# Filter to extract a ZIP file one by one to a temporary location
-# [extract_bag_zip_file]
-# class = stetl.filters.fileextractor.ZipFileExtractor
-# file_path = temp/bagger.zip
-# delete_file = True
+# Filter to extract a ZIP file always to XML file
+# [GDAL_3462]
+[extract_bag_vsizip_file_xml]
+class = stetl.filters.fileextractor.VsiFileExtractor
+file_path = temp/bagger.xml
+delete_file = True
 
 # Filter to generate the vsizip-names
 [vsizip_filter]
 class = stetl.filters.stringfilter.StringConcatFilter
-prepend_string = /vsizip/
+prepend_string = {temp_file_path_prepend}
 
 # generic converter: OGR VSI (zip) path string to parsed XML tree doc
 [convert_vsi_to_etree_doc]
@@ -110,6 +130,16 @@ script = xsl/Leveringsdoc2gml.xsl
 # OUTPUTS
 #
 
+# Algemene Postgres SQL Executor
+[output_postgres_sql]
+class = stetl.outputs.dboutput.PostgresDbOutput
+database = {pg_db}
+host = {pg_host}
+port = {pg_port}
+user = {pg_user}
+password = {password}
+schema = {schema}
+
 # Postgres provincie_gemeente tabel wegschrijven
 [output_postgres_gemeenten]
 class = stetl.outputs.dboutput.PostgresInsertOutput
@@ -122,16 +152,6 @@ schema = {schema}
 table = provincie_gemeente
 key = gemeentecode
 replace = true
-
-# Algemene Postgres SQL Executor
-[output_postgres_sql]
-class = stetl.outputs.dboutput.PostgresDbOutput
-database = {pg_db}
-host = {pg_host}
-port = {pg_port}
-user = {pg_user}
-password = {password}
-schema = {schema}
 
 # The ogr2ogr command-line for generic GML Features.
 [output_ogr_postgis]
