#296 #306 new Stetl Archive Expander performance optimization ogr2ogr

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -29,8 +29,7 @@ chains = input_sql_pre|output_postgres_sql,
          input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
          input_cbs_gemeenten_csv|output_postgres_gemeenten,
          input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
-         input_bag_zip_file|extract_bag_vsizip_file|vsizip_filter|output_ogr2ogr,
-         input_bag_zip_file_wpl|extract_bag_vsizip_file_xml|output_ogr2ogr,
+         input_bag_zip_file|extract_bag_vsizip_file|expand_zip_archive|output_ogr2ogr,
          input_sql_post|output_postgres_sql
 
 
@@ -65,15 +64,15 @@ delimiter = ;
 [input_bag_zip_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
-name_filter = {bag_obj_file_pat_no_wpl}{bag_file_wildcard}.{bag_file_ext}
+name_filter = {bag_obj_file_pat}{bag_file_wildcard}.{bag_file_ext}
 
 # BAG Extract LV zipfile for WPL only.
 # Contains the zip files for each BAG obj type
 # [GDAL_3462]
-[input_bag_zip_file_wpl]
-class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = {bag_input_file}
-name_filter = {bag_wpl_file_pat}{bag_file_wildcard}.xml
+# [input_bag_zip_file_wpl]
+# class = stetl.inputs.fileinput.VsiZipFileInput
+# file_path = {bag_input_file}
+# name_filter = bag_wpl_file_pat {bag_file_wildcard}.xml
 
 # Output GEM-WPL-RELATIE XML Input file as GDAL VSI string.
 [input_bag_wpl_gem_koppeling_file]
@@ -98,17 +97,24 @@ class = stetl.filters.fileextractor.VsiFileExtractor
 file_path = temp/bagger.{bag_file_ext}
 delete_file = True
 
+# Filter to expand a ZIP archive to a configured target dir
+[expand_zip_archive]
+class = stetl.filters.archiveexpander.ZipArchiveExpander
+target_dir = temp/temp_dir
+remove_input_file = False
+clear_target_dir = True
+
 # Filter to extract a ZIP file always to XML file
 # [GDAL_3462]
-[extract_bag_vsizip_file_xml]
-class = stetl.filters.fileextractor.VsiFileExtractor
-file_path = temp/bagger.xml
-delete_file = True
+# [extract_bag_vsizip_file_xml]
+# class = stetl.filters.fileextractor.VsiFileExtractor
+# file_path = temp/bagger.xml
+# delete_file = True
 
 # Filter to generate the vsizip-names
-[vsizip_filter]
-class = stetl.filters.stringfilter.StringConcatFilter
-prepend_string = {temp_file_path_prepend}
+# [vsizip_filter]
+# class = stetl.filters.stringfilter.StringConcatFilter
+# prepend_string = temp_file_path_prepend
 
 # generic converter: OGR VSI (zip) path string to parsed XML tree doc
 [convert_vsi_to_etree_doc]
@@ -178,15 +184,19 @@ input_format = string
 
 # destination format: OGR vector format name
 dest_format = PostgreSQL
+
 # destination datasource: name of datasource
 dest_data_source = "PG:dbname={pg_db} host={pg_host} port={pg_port} user={pg_user} password={password} active_schema={schema}"
+
 # layer creation options will only be added to ogr2ogr on first run
 lco = {layer_creation_opts}
 
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
+
 # miscellaneous ogr2ogr options
-options = -append -skipfailures {srs_opts} {feat_per_tx} {multival_opts} {open_opts}
+options = {config_opts} {srs_opts} {feat_per_tx} {multival_opts} {open_opts}
+
 # cleanup input?
 cleanup_input = False
 
