--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -10,7 +10,7 @@
 # - Process CBS gemeente provincie koppelingen
 # - BAG Woonplaats-Gemeente Koppeling (onderdeel van BAG Extract Kadaster product)
 # - input_bag_zip_file: inlezen BAG in PostGIS met LVBAG Driver
-# - input_sql_post: post=processing o.a. aanmaken indexen en VIEWs
+# - input_sql_post: post-processing o.a. aanmaken indexen en VIEWs
 #
 # NB We need to Outputs GDAL VSI filepath to XML for only WPL.
 # Reason is issue: https://github.com/OSGeo/gdal/issues/3462
@@ -19,7 +19,8 @@
 # Once that issue is solved we can remove the WPL specific Chain and
 # use the bag_obj_file_pat to handle all object types.
 # Lines to be fixed are indicated below with the line:
-# [GDAL_3462]
+# [GDAL_3462] As reading from VSIZIp appears to be slow, the obj zip
+# is unpacked anyway.
 #
 # Just van den Broecke - 2021
 
@@ -60,19 +61,10 @@ delimiter = ;
 # Outputs GDAL VSI filepath strings filtered by name_filter pattern
 # Any substitutable values are specified in curly brackets e.g. {password}.
 # Actual values can be passed as args to Stetl main.py.
-# [GDAL_3462]
 [input_bag_zip_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
 name_filter = {bag_obj_file_pat}{bag_file_wildcard}.{bag_file_ext}
-
-# BAG Extract LV zipfile for WPL only.
-# Contains the zip files for each BAG obj type
-# [GDAL_3462]
-# [input_bag_zip_file_wpl]
-# class = stetl.inputs.fileinput.VsiZipFileInput
-# file_path = {bag_input_file}
-# name_filter = bag_wpl_file_pat {bag_file_wildcard}.xml
 
 # Output GEM-WPL-RELATIE XML Input file as GDAL VSI string.
 [input_bag_wpl_gem_koppeling_file]
@@ -103,18 +95,6 @@ class = stetl.filters.archiveexpander.ZipArchiveExpander
 target_dir = temp/temp_dir
 remove_input_file = False
 clear_target_dir = True
-
-# Filter to extract a ZIP file always to XML file
-# [GDAL_3462]
-# [extract_bag_vsizip_file_xml]
-# class = stetl.filters.fileextractor.VsiFileExtractor
-# file_path = temp/bagger.xml
-# delete_file = True
-
-# Filter to generate the vsizip-names
-# [vsizip_filter]
-# class = stetl.filters.stringfilter.StringConcatFilter
-# prepend_string = temp_file_path_prepend
 
 # generic converter: OGR VSI (zip) path string to parsed XML tree doc
 [convert_vsi_to_etree_doc]
