--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -47,7 +47,7 @@ format_args = schema:{schema}
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/finalize-tables.sql,sql/create-views.sql,sql/create-indexes.sql
+file_path = sql/finalize-tables.sql,sql/fill-reltables.sql,sql/create-views.sql,sql/create-indexes.sql
 format_args = schema:{schema}
 
 # Input file gemeente-provincies van CBS per jaar
