WIP #296 #306 performance enhanced - let OGR create and fill initial tables

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -169,13 +169,13 @@ dest_format = PostgreSQL
 dest_data_source = "PG:dbname={pg_db} host={pg_host} port={pg_port} user={pg_user} password={password} active_schema={schema}"
 
 # layer creation options will only be added to ogr2ogr on first run
-lco = {layer_creation_opts}
+lco =
 
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 
 # miscellaneous ogr2ogr options
-options = {config_opts} {srs_opts} {feat_per_tx} {multival_opts} {open_opts}
+options = {layer_creation_opts} {config_opts} {srs_opts} {feat_per_tx} {multival_opts} {open_opts}
 
 # cleanup input?
 cleanup_input = False
