--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: nlextract/nlextract
-          tags: latest
+          tags: latest,1.5.2
           # tag_with_ref: true
           # tag_with_sha: true
