--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ GDAL==2.3.1
 idna==2.10
 imagesize==1.2.0
 Jinja2==2.11.3
-lxml==4.6.2
+lxml>=4.6.3
 MarkupSafe==1.1.1
 packaging==20.4
 psycopg2==2.8.6
