Use same provincie_gemeente schema as BAGv1.
Add gemeentelijke-indeling.py option to convert gemeentelijke-indeling.xml
to CSV. Use this CSV file to import into PostgreSQL.

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -28,6 +28,7 @@
 # [GDAL_3462]
 chains = input_sql_pre|output_postgres_sql,
          input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
+         input_string_file|command_executor,
          input_cbs_gemeenten_csv|output_postgres_gemeenten,
          input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
          input_bag_zip_file|extract_bag_vsizip_file|expand_zip_archive|output_ogr2ogr,
@@ -50,11 +51,19 @@ class = stetl.inputs.fileinput.StringFileInput
 file_path = sql/finalize-tables.sql,sql/fill-reltables.sql,sql/create-views.sql,sql/create-indexes.sql
 format_args = schema:{schema}
 
+[input_string_file]
+class = stetl.inputs.fileinput.StringFileInput
+file_path = data/cbs/gemeentelijke-indeling_command.txt
+
+[command_executor]
+class = stetl.filters.execfilter.CommandExecFilter
+
 # Input file gemeente-provincies van CBS per jaar
 [input_cbs_gemeenten_csv]
 class = stetl.inputs.fileinput.CsvFileInput
-file_path = data/cbs/gemeente/{cbs_gemeenten_jaar}.csv
+file_path = data/cbs/gemeentelijke-indeling.csv
 delimiter = ;
+empty_string_is_none = True
 
 # BAG Extract LV zipfile.
 # Contains the zip files for each BAG obj type
@@ -136,8 +145,6 @@ user = {pg_user}
 password = {password}
 schema = {schema}
 table = provincie_gemeente
-key = gemeentecode
-replace = true
 
 # The ogr2ogr command-line for generic GML Features.
 [output_ogr_postgis]
