Docker build/push only for direct to master push

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,18 @@
-name: Publish Docker Image
+name: Build and Publish NLExtract Docker Image
 
-# Controls when the action will run. Triggers the workflow on push or pull request
+# Controls when the action will run. Triggers the workflow on push
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master
+  paths-ignore:
+    - 'docs/**'
+    - '**.md'
+
+# Ignore PRs (permission problem for DockerHub)
+#  pull_request:
+#    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
