--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ imagesize==1.2.0
 Jinja2==2.11.3
 lxml>=4.6.3
 MarkupSafe==1.1.1
+openpyxl==3.0.9
 packaging==20.4
 psycopg2==2.8.6
 Pygments==2.7.4
