Don't change schema to match BAG v1

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -48,7 +48,7 @@ format_args = schema:{schema}
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/finalize-tables.sql,sql/fill-reltables.sql,sql/create-views.sql,sql/create-indexes.sql
+file_path = sql/fill-reltables.sql,sql/create-views.sql,sql/create-indexes.sql,sql/bag-wpl-osm.sql
 format_args = schema:{schema}
 
 [input_string_file]
