Add chain to insert levering_xml record in nlx_bag_info

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -28,6 +28,7 @@
 # [GDAL_3462]
 chains = input_sql_pre|output_postgres_sql,
          input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
+         input_bag_leveringsdoc_zipfile|extract_bag_leveringsdoc_file|convert_leveringsdoc_to_record|output_postgres_levering,
          input_string_file|command_executor,
          input_cbs_gemeenten_csv|output_postgres_gemeenten,
          input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
@@ -87,6 +88,11 @@ class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
 name_filter = Leveringsdocument-BAG-Extract.xml
 
+[input_bag_leveringsdoc_zipfile]
+class = stetl.inputs.fileinput.ZipFileInput
+file_path = {bag_input_file}
+name_filter = Leveringsdocument-BAG-Extract.xml
+
 
 #
 # FILTERS
@@ -97,6 +103,10 @@ name_filter = Leveringsdocument-BAG-Extract.xml
 class = stetl.filters.fileextractor.VsiFileExtractor
 file_path = temp/bagger.{bag_file_ext}
 delete_file = True
+
+[extract_bag_leveringsdoc_file]
+class = stetl.filters.fileextractor.ZipFileExtractor
+file_path = temp/Leveringsdocument-BAG-Extract.xml
 
 # Filter to expand a ZIP archive to a configured target dir
 [expand_zip_archive]
@@ -110,6 +120,10 @@ clear_target_dir = True
 class = stetl.filters.formatconverter.FormatConverter
 input_format = gdal_vsi_path
 output_format = etree_doc
+
+# convert leverings document content to record
+[convert_leveringsdoc_to_record]
+class = stetl.filters.bagfilter.LeveringFilter
 
 # XSLT transformer GEM-WPL-RELATIE to OGR Simple Feature GML doctree
 [transformer_xslt_gem_wpl]
@@ -145,6 +159,19 @@ user = {pg_user}
 password = {password}
 schema = {schema}
 table = provincie_gemeente
+
+# Insert levering XML into nlx_bag_info table
+[output_postgres_levering]
+class = stetl.outputs.dboutput.PostgresInsertOutput
+database = {pg_db}
+host = {pg_host}
+port = {pg_port}
+user = {pg_user}
+password = {password}
+schema = {schema}
+table = nlx_bag_info
+key = sleutel
+replace = true
 
 # The ogr2ogr command-line for generic GML Features.
 [output_ogr_postgis]
