Use multiprocessing Python implementation

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -26,13 +26,19 @@
 
 [etl]
 # [GDAL_3462]
+#chains = input_sql_pre|output_postgres_sql,
+#         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
+#         input_bag_leveringsdoc_zipfile|extract_bag_leveringsdoc_file|convert_leveringsdoc_to_record|output_postgres_levering,
+#         input_string_file|command_executor,
+#         input_cbs_gemeenten_csv|output_postgres_gemeenten,
+#         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
+#         input_bag_zip_file|extract_bag_vsizip_file|expand_zip_archive|output_ogr2ogr,
+#         input_sql_post|output_postgres_sql
+
 chains = input_sql_pre|output_postgres_sql,
-         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
-         input_bag_leveringsdoc_zipfile|extract_bag_leveringsdoc_file|convert_leveringsdoc_to_record|output_postgres_levering,
+         input_bag_zipfile|output_bag_processor,
          input_string_file|command_executor,
          input_cbs_gemeenten_csv|output_postgres_gemeenten,
-         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
-         input_bag_zip_file|extract_bag_vsizip_file|expand_zip_archive|output_ogr2ogr,
          input_sql_post|output_postgres_sql
 
 
@@ -75,6 +81,16 @@ empty_string_is_none = True
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
 name_filter = {bag_obj_file_pat}{bag_file_wildcard}.{bag_file_ext}
+
+#[input_bag_zipfile]
+#class = stetl.inputs.fileinput.ZipFileInput
+#file_path = {bag_input_file}
+
+[input_bag_zipfile]
+class = stetl.inputs.baginput.BAGInput
+file_path = {bag_input_file}
+temp_dir = temp/temp_dir
+multiprocessing = True
 
 # Output GEM-WPL-RELATIE XML Input file as GDAL VSI string.
 [input_bag_wpl_gem_koppeling_file]
@@ -172,6 +188,28 @@ schema = {schema}
 table = nlx_bag_info
 key = sleutel
 replace = true
+
+# Process BAG 2.0 Extract files
+[output_bag_processor]
+class = stetl.outputs.bagoutput.BAGOutput
+database = {pg_db}
+host = {pg_host}
+port = {pg_port}
+user = {pg_user}
+password = {password}
+schema = {schema}
+#truncate = True
+temp_dir = temp/temp_dir
+process_lig = True
+process_num = True
+process_opr = True
+process_pnd = True
+process_sta = True
+process_vbo = True
+process_wpl = True
+process_gwr = True
+process_levering = True
+multiprocessing = True
 
 # The ogr2ogr command-line for generic GML Features.
 [output_ogr_postgis]
