Update `adres.cfg` to use the correct SQL queries

--- a/bagv2/etl/conf/adres.cfg
+++ b/bagv2/etl/conf/adres.cfg
@@ -20,7 +20,14 @@ chains = input_sql_address_tables|output_postgres_sql
 # Pre SQL file inputs to be executed
 [input_sql_address_tables]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/adres/adres-tabel.sql
+file_path = sql/fill-reltables.sql,
+            sql/adres/adres-tabel-plus-1.sql,
+            sql/adres/adres-tabel-plus-2.sql,
+            sql/adres/adres-tabel-plus-3.sql,
+            sql/adres/adres-tabel-plus-4.sql,
+            sql/adres/adres-tabel-plus-5.sql,
+            sql/adres/adres-tabel-totaal.sql,
+            sql/adres/adres-plus2adres-full-tabel.sql
 format_args = schema:{schema}
 
 #
