--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: nlextract/nlextract
-          tags: latest,1.5.4dev
+          tags: latest,1.5.4
           # tag_with_ref: true
           # tag_with_sha: true
