#375 add GFS filter for BRK ETL and some general Win updates

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -15,7 +15,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|handle_orl|handle_pand|output_ogr2ogr,
+         input_zip_file|extract_zip_file|handle_orl|handle_pand|prepare_gfs|output_ogr2ogr,
          input_sql_post|schema_name_filter|output_postgres
 
 # Alternative chains for testing
@@ -99,6 +99,11 @@ child_feature_xpath = imgeo:nummeraanduidingreeks[imgeo:Nummeraanduidingreeks]
 keep_parent_feature = True
 child_feature_alt_tag_name = BuildingPart_nummeraanduiding
 parent_feature_geom_name = imgeo:geometrie2dGrondvlak
+
+# Prepare the generic GFS file to optimize the loading speed
+[prepare_gfs]
+class = stetlcomponents.gfspreparationfilter.GfsPreparationFilter
+input_gfs = {gfs_template}
 
 # Below alternative outputs are meant for testing
 # The ogr2ogr command-line, may use any output here, as long as
