#378 fix BGT ETL GDAL options for missing SRS dimensions with GML_SRS_DIMENSION_IF_MISSING

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -114,7 +114,7 @@ spatial_extent = {spatial_extent}
 # gfs template: not needed, since this is being taken care of by the GfsPreparationFilter
 #gfs_template = {temp_dir}/prepped.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts}
+options = -append -gt 65536 --config GML_SRS_DIMENSION_IF_MISSING 2 {multi_opts}
 # cleanup input?
 cleanup_input = True
 
