#375 bugfix - remove gfs_template param in BRK Stetl config for ogr2ogr outputs

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -71,10 +71,12 @@ dest_data_source = "PG:dbname={database} host={host} port={port} user={user} pas
 lco = -lco LAUNDER=YES -lco PRECISION=NO -lco FID64=FALSE
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
-# gfs template
-gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO --config CPL_ZIP_ENCODING CP437
+# remove input files?
+cleanup_input = True
+# gfs template - since 27.03.2024 provided via GfsPreparationFilter
+# gfs_template = {gfs_template}
 
 # Filter to copy openbareruimtelabel features with only one position per feature
 [handle_orl]
@@ -122,10 +124,11 @@ lco = -lco SPATIAL_INDEX=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # gfs template
-gfs_template = {gfs_template}
+# gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts} --config CPL_ZIP_ENCODING CP437
-
+# remove input files?
+cleanup_input = True
 
 # Send to stdout
 [output_std]
