upgrade Dockerfile Ubuntu 24.04 GDAL 3.9.1 Python 3.12 - 1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: nlextract/nlextract
-          tags: latest,1.5.5
+          tags: latest,1.5.6dev
           # tag_with_ref: true
           # tag_with_sha: true
