upgrade deps for Python 3.12.3 and GDAL 3.9.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,12 @@
-# Working requirements with Python 3.7.1 and Wheel
-alabaster==0.7.12
-Babel==2.9.1
-certifi==2024.7.4
-chardet==3.0.4
-Deprecated==1.2.10
-docutils==0.16
-GDAL==2.3.1
-idna==3.7
-imagesize==1.2.0
-Jinja2==3.1.4
-lxml>=4.6.3
-MarkupSafe==1.1.1
-openpyxl==3.0.9
-packaging==20.4
-psycopg2==2.8.6
-Pygments==2.15.0
-pyparsing==2.4.7
-pytz==2020.4
-requests==2.32.0
-six==1.15.0
-snowballstemmer==2.0.0
-Sphinx==3.3.1
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-urllib3==1.26.19
-wrapt==1.12.1
-xlrd==2.0.1
+# Working requirements with Python 3.12.3
+Deprecated
+GDAL
+Jinja2
+lxml
+openpyxl
+packaging
+psycopg2-binary
+requests
+Setuptools
+Sphinx
+xlrd
